@@ -39,6 +39,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       X2Go Client expects one.
     - sshmasterconnection.cpp: add OATH TOTP prompt prefix. Fixes: #860.
     - res/i18n: refresh translation files again.
+    - res/i18n/x2goclient_nb_no.ts: replace "X-Serv..." with "X.Org Server"
+      where applicable.
   * debian/control:
     - Change apache2-dev | libc6-dev build dependency back to apache2-dev
       only. Otherwise, apache2-dev is not installed at all, even though
